<resources>
    <string name="app_name">CPP Aplikacija</string>
    <string name="loading_screen_text">CPP Aplikacija.</string>
    <string name="category_title">Naslov kategorije</string>
    <string name="num_of_questions">Število vprašanj: 0</string>
    <string name="category_image_description">Slika, ki opisuje kategorijo.</string>
    <string name="num_questions_placeholder">Število vprašanj: %d</string>
    <string name="text_button_list">Seznam vseh vprašanj</string>
    <string name="text_button_mix">Mešana vprašanja</string>
    <string name="choose">Izberi kategorijo</string>
    <string name="question_text">Koliko je najvišja dovoljena hitrost v naselju?</string>
    <string name="answer">10km/h.</string>
    <string name="check">Preveri</string>
    <string name="next">Naprej</string>
    <string name="fav">Priljubljeno</string>
    <string name="home">Vse kategorije</string>
    <string name="history">Moj napredek</string>
    <string name="correct_answers">Število pravilno odgovorjenih vprašanj: %d</string>
    <string name="incorrect_answers">Število napačno odgovorjenih vprašanj: %d</string>
    <string name="total_answers">Število odgovorjenih vprašanj: %d</string>
    <string name="total">Število vseh vprašanj: %d</string>
    <string name="question_image">Question image</string>
    <string name="result">Tvoj rezultat je %1$d/10!</string>
    <string name="ok">OK</string>
</resources>