<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/catTitleInQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/category_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Question Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/catTitleInQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Question Text -->
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_text"
                android:textSize="18sp"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Question Image -->
            <ImageView
                android:id="@+id/iv_question_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/placeholder_image"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Answer Buttons -->
    <Button
        android:id="@+id/btn_answer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintTop_toBottomOf="@id/card_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_answer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintTop_toBottomOf="@id/btn_answer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_answer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintTop_toBottomOf="@id/btn_answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Bottom Buttons -->
    <Button
        android:id="@+id/btn_check_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next_question"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_check_answer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>